@@ -1,25 +1,113 @@
 <?php
 /**
-* Administration of user ranks, main file
+* ImpressCMS User Ranks.
 *
-* @copyright	http://www.xoops.org/ The XOOPS Project
-* @copyright	XOOPS_copyrights.txt
-* @copyright	http://www.impresscms.org/ The ImpressCMS Project
-* @license	LICENSE.txt
-* @package	Administration
-* @since	XOOPS
-* @author	http://www.xoops.org The XOOPS Project
-* @author	modified by UnderDog <underdog@impresscms.org>
-* @version	$Id$
+* @copyright	The ImpressCMS Project http://www.impresscms.org/
+* @license		http://www.gnu.org/licenses/old-licenses/gpl-2.0.html GNU General Public License (GPL)
+* @package		Administration
+* @since		1.2
+* @author		Sina Asghari (aka stranger) <pesian_stranger@users.sourceforge.net>
+* @version		$Id$
 */
 
-/**
- * Manage user rank.
- * @copyright XOOPS Project
- * @todo    Fix register_globals!
- **/
-
 if ( !is_object($icmsUser) || !is_object($icmsModule) || !$icmsUser->isAdmin($icmsModule->mid()) ) {
+    exit("Access Denied");
+}
+
+$icms_userrank_handler = icms_getmodulehandler('userrank');
+function edituserrank($showmenu = false, $rank_id = 0, $clone=false)
+{	
+	global $icms_userrank_handler, $icmsAdminTpl;
+
+	icms_cp_header();
+	
+	$userrankObj = $icms_userrank_handler->get($rank_id);
+
+	if (!$clone && !$userrankObj->isNew()){
+
+		$sform = $userrankObj->getForm(_CO_ICMS_USERRANKS_EDIT, 'adduserrank');
+		
+		$sform->assign($icmsAdminTpl);
+		$icmsAdminTpl->assign('icms_userrank_title', _CO_ICMS_USERRANKS_EDIT_INFO);
+		$icmsAdminTpl->display('db:admin/userrank/system_adm_userrank.html');
+	} else {
+		$userrankObj->setVar('rank_id', 0);
+
+		$sform = $userrankObj->getForm(_CO_ICMS_USERRANKS_CREATE, 'adduserrank');
+		$sform->assign($icmsAdminTpl);
+
+		$icmsAdminTpl->assign('icms_userrank_title', _CO_ICMS_USERRANKS_CREATE_INFO);
+		$icmsAdminTpl->display('db:admin/userrank/system_adm_userrank.html');		
+	}
+}
+icms_loadLanguageFile('system', 'common');
+
+
+if(!empty($_POST)) foreach($_POST as $k => $v) ${$k} = StopXSS($v);
+if(!empty($_GET)) foreach($_GET as $k => $v) ${$k} = StopXSS($v);
+$op = (isset($_POST['op']))?trim(StopXSS($_POST['op'])):((isset($_GET['op']))?trim(StopXSS($_GET['op'])):'');
+
+switch ($op) {
+	case "mod":
+
+		$rank_id = isset($_GET['rank_id']) ? intval($_GET['rank_id']) : 0 ;
+
+		edituserrank(true, $rank_id);
+		
+		break;
+
+	case "clone":
+
+		$rank_id = isset($_GET['rank_id']) ? intval($_GET['rank_id']) : 0 ;
+
+		edituserrank(true, $rank_id, true);
+		break;
+
+	case "adduserrank":
+        include_once ICMS_ROOT_PATH."/kernel/icmspersistablecontroller.php";
+        $controller = new IcmsPersistableController($icms_userrank_handler);
+		$controller->storeFromDefaultForm(_CO_ICMS_USERRANKS_CREATED, _CO_ICMS_USERRANKS_MODIFIED);
+		break;
+
+	case "del":
+		include_once ICMS_ROOT_PATH."/kernel/icmspersistablecontroller.php";
+	    $controller = new IcmsPersistableController($icms_userrank_handler);		
+		$controller->handleObjectDeletion();
+
+		break;
+
+	default:
+
+		icms_cp_header();
+		
+		include_once ICMS_ROOT_PATH."/kernel/icmspersistabletable.php";
+		
+		$objectTable = new IcmsPersistableTable($icms_userrank_handler);
+		$objectTable->addColumn(new IcmsPersistableColumn('rank_title', _GLOBAL_LEFT));
+		$objectTable->addColumn(new IcmsPersistableColumn('rank_min', _GLOBAL_LEFT));
+		$objectTable->addColumn(new IcmsPersistableColumn('rank_max', _GLOBAL_LEFT));
+		$objectTable->addColumn(new IcmsPersistableColumn(_CO_ICMS_USERRANK_RANK_IMAGE, 'center', 200, 'getRankPicture'));
+		//$objectTable->addColumn(new IcmsPersistableColumn('language', 'center', 150));
+
+		$objectTable->addIntroButton('adduserrank', 'admin.php?fct=userrank&op=mod', _CO_ICMS_USERRANKS_CREATE);
+
+		$objectTable->addQuickSearch(array('title', 'summary', 'description'));
+
+		$objectTable->addCustomAction('getCloneLink');
+
+		$icmsAdminTpl->assign('icms_userrank_table', $objectTable->fetch());
+		
+		$icmsAdminTpl->assign('icms_userrank_explain', true);
+		$icmsAdminTpl->assign('icms_userrank_title', _CO_ICMS_USERRANKS_DSC);
+
+		$icmsAdminTpl->display(ICMS_ROOT_PATH . '/modules/system/templates/admin/userrank/system_adm_userrank.html');
+
+		break;
+}
+
+icms_cp_footer();
+
+/*if ( !is_object($icmsUser) || !is_object($icmsModule) || !$icmsUser->isAdmin($icmsModule->mid()) ) {
 	exit("Access Denied");
 }
 
@@ -71,7 +159,7 @@ switch ($op) {
 		$rank_title = $myts->stripSlashesGPC($rank_title);
 		$rank_image = '';
 		include_once XOOPS_ROOT_PATH.'/class/uploader.php';
-		$uploader = new XoopsMediaUploader(XOOPS_UPLOAD_PATH, array('image/gif', 'image/jpeg', 'image/pjpeg', 'image/x-png'), $xoopsConfigUser['rank_maxsize'], $xoopsConfigUser['rank_width'], $xoopsConfigUser['rank_height']);
+		$uploader = new XoopsMediaUploader(, array('image/gif', 'image/jpeg', 'image/pjpeg', 'image/x-png'), $xoopsConfigUser['rank_maxsize'], $xoopsConfigUser['rank_width'], $xoopsConfigUser['rank_height']);
 		$uploader->setPrefix('rank');
 		if ($uploader->fetchMedia($_POST['xoops_upload_file'][0])) {
 			if ($uploader->upload()) {
@@ -148,5 +236,5 @@ switch ($op) {
 		include_once XOOPS_ROOT_PATH."/modules/system/admin/userrank/userrank.php";
 		RankForumAdmin();
 		break;
-}
+}*/
 ?>
