@@ -1,32 +1,38 @@
 <?php
 // $Id$
-//%%%%%%	Admin Module Name  UserRank 	%%%%%
-if(!defined('_AM_DBUPDATED')){define("_AM_DBUPDATED","Database Updated Successfully!");}
-define("_AM_RANKSSETTINGS","User Ranks Settings");
-define("_AM_TITLE","Title");
-define("_AM_MINPOST","Min. Posts");
-define("_AM_MAXPOST","Max. Posts");
-define("_AM_IMAGE","Image");
-define("_AM_SPERANK","Special Ranks");
-define("_AM_ON","on");
-define("_AM_OFF","off");
-define("_AM_EDIT","Edit");
-define("_AM_DEL","Delete");
-define("_AM_ADDNEWRANK","Add a New Rank");
-define("_AM_RANKTITLE","Rank Title");
-define("_AM_SPECIAL","Special");
-define("_AM_ADD","Add");
-define("_AM_EDITRANK","Edit Ranks");
-define("_AM_ACTIVE","active");
-define("_AM_SAVECHANGE","Save Changes");
-define("_AM_WAYSYWTDTR","WARNING: Are you sure you want to delete this Ranking?");
-define("_AM_YES","Yes");
-define("_AM_NO","No");
-define("_AM_VALIDUNDER","(A valid image file under <b>%s</b> directory)");
-define("_AM_SPECIALCAN","(Special ranks can be assigned to users irrespective of the number of user posts)");
-define("_AM_ACTION","Action");
 
-define("_AM_RANKW","Max width %s pixels");
-define("_AM_RANKH","Max height %s pixels");
-define("_AM_RANKMAX","Max filesize %s bytes");
+
+
+
+define('_CO_ICMS_USERRANKS','User Ranks Settings');
+define('_CO_ICMS_USERRANKS_DSC', 'Here is a list of the user ranks available in the system.');
+define('_CO_ICMS_USERRANK', 'User rank');
+define('_CO_ICMS_USERRANKS_CREATE', 'Add a user rank');
+define('_CO_ICMS_USERRANKS_CREATE_INFO', 'Simply fill this form in order to add a user rank.');
+define('_CO_ICMS_USERRANKS_DELETE_CONFIRM', 'Do you really want to delete this user rank from the system ?');
+define('_CO_ICMS_USERRANKS_EDIT', 'Edit a user rank');
+define('_CO_ICMS_USERRANKS_EDIT_INFO', 'Use this form to edit the information of this user rank.');
+define('_CO_ICMS_USERRANK_INFO', 'User rank information');
+define('_CO_ICMS_USERRANK_NOT_FOUND', 'The selected user rank was not found.');
+
+define('_CO_ICMS_USERRANKS_CREATED', 'The user rank was successfully added.');
+define('_CO_ICMS_USERRANKS_MODIFIED', 'The user rank was successfully modified.');
+
+define('_CO_ICMS_USERRANK_RANK_SPECIAL','Special Ranks');
+define('_CO_ICMS_USERRANK_RANK_SPECIAL_DSC','(Special ranks can be assigned to users irrespective of the number of user posts)');
+define('_CO_ICMS_USERRANK_RANK_TITLE','Rank Title');
+define('_CO_ICMS_USERRANK_RANK_TITLE_DSC','');
+define('_CO_ICMS_USERRANK_RANK_MIN','Min. Posts');
+define('_CO_ICMS_USERRANK_RANK_MIN_DSC', '');
+define('_CO_ICMS_USERRANK_RANK_MAX','Max. Posts');
+define('_CO_ICMS_USERRANK_RANK_MAX_DSC', '');
+define('_CO_ICMS_USERRANK_RANK_IMAGE','Image');
+define('_CO_ICMS_USERRANK_RANK_IMAGE_DSC', '');
+
+define('_CO_ICMS_USERRANK_EXPLAIN_TITLE', 'What are User Ranks ?');
+define('_CO_ICMS_USERRANK_EXPLAIN', 'User ranks are picture, used to make difference between users in different levels of your site! Complete documentation of this feature can be found here: <a rel="external" href="http://wiki.impresscms.org/index.php?title=User_ranks">User ranks</a>.');
+
+define('_AM_RANKW','Max width %s pixels');
+define('_AM_RANKH','Max height %s pixels');
+define('_AM_RANKMAX','Max filesize %s bytes');
 ?>
