@@ -1,0 +1,16 @@
+<div class="CPbigTitle" style="background-image: url(<{$xoops_url}>/modules/system/admin/userrank/images/userrank_big.png)"><{$smarty.const._CO_ICMS_USERRANK}></div><br />
+
+<{if $icms_userrank_explain}>
+	<h1><{$smarty.const._CO_ICMS_USERRANK_EXPLAIN_TITLE}></h1>
+	<p><{$smarty.const._CO_ICMS_USERRANK_EXPLAIN}></p>
+<{/if}>
+
+<p><{$icms_userrank_title}></p>
+
+<{if $icms_userrank_table}>
+	<{$icms_userrank_table}>
+<{/if}>
+
+<{if $adduserrank}>
+	<{includeq file='db:system_common_form.html' form=$adduserrank}>
+<{/if}>
